# circuits-benchmark-saes

./: Dockerfile  LICENSE  README.md  load_monosemantic_benchmarks.ipynb  load_polysemantic_benchmark.ipynb  mypy.ini  pyproject.toml  train_monosemantic_benchmarks.ipynb  train_polysemantic_benchmarks.ipynb
.github/workflows/: test.yml
poly_bench/: io.py  poly_hl_model.py  test_poly_bench_cases.ipynb  utils.py
poly_bench/cases/: __init__.py  duplicate_remover.py  left_greater.py  paren_checker.py  poly_case.py  unique_extractor.py  utils.py
quick-experiments/: Check_circuit_performance.ipynb  SAE_trained_on_benchmark.ipynb  backprop_check.ipynb  build_parens_benchmark_by_hand.ipynb  iit_repo_paren_checker.py  paren_checker.py  paren_checker_iit_repo.ipynb  parens_bench_siit_and_sae.ipynb  poly_hl_model.py  polysemantic_numeric_circuits_bench.ipynb  sae_utils.py  siit_utils.py
tests/: test_hl_dataset_alignment.py  test_hl_model_components.py
